--- a/home.html
+++ b/home.html
@@ -364,7 +364,7 @@
 			width="800"
 			height="600"
 			frameBorder="1"
-			src="https://flipgrid.com/buker5291?embed=true"
+			src="https://flipgrid.com/embed/topic/buker5291"
 			webkitallowfullscreen
 			mozallowfullscreen
 			allowfullscreen
@@ -374,7 +374,7 @@
     width="800"
     height="600"
     frameBorder="1"
-    src="https://flipgrid.com/65905cbe?embed=true"
+    src="https://flipgrid.com/embed/topic/65905cbe"
     webkitallowfullscreen
     mozallowfullscreen
     allowfullscreen
