--- a/home.html
+++ b/home.html
@@ -358,17 +358,7 @@
 		<div class="itemFullText"> <p><span>Intro text here</span>	</p>
 
 
-			<iframe
-			width="800"
-			height="600"
-			frameBorder="1"
-			src="https://flipgrid.com/embed/topic/buker5291"
-			webkitallowfullscreen
-			mozallowfullscreen
-			allowfullscreen
-			allow="microphone; camera"></iframe>
-
-			<iframe
+<iframe
     width="800"
     height="600"
     frameBorder="1"
@@ -377,7 +367,19 @@
     mozallowfullscreen
     allowfullscreen
     allow="microphone; camera"></iframe>
-
+<br>
+						<iframe
+    width="800"
+    height="600"
+    frameBorder="1"
+    src="https://flipgrid.com/65905cbe?embed=true"
+    webkitallowfullscreen
+    mozallowfullscreen
+    allowfullscreen
+    allow="microphone; camera"></iframe>
+			
+			<br>
+			
 	<iframe
     width="600"
     height="338"
